src/css/pdf.css
:root {
    --project-padding: 1rem;

    --break-border-color: rgba(0,0,0,0.2);
}

@page {
    size: A4 portrait;
}

body {
    background-image: none;
}

p {
    margin-bottom: 0.8rem;
}

/* The default A4 margins are 1 inch. */
.container {
    padding-left: 1in;
    padding-right: 1in;
}

.container > p {
    margin-left: 1rem;
    margin-right: 1rem;
}

/*
    Toggle print-only elements.
*/
.print {
    display: initial !important;
}

.no-print {
    display: none;
}

.head-text {
    vertical-align: middle;
    margin-left: 2rem;
}

.title-text {
	text-align: initial;
}

.social-link {
    padding: 0;
    margin-right: 1rem;
}

.social-links-container {
	display: table;
	margin: 0;
}

.nav-bar,.section-break,footer {
    display: none;
}

.project-list {
    column-count: 2;

    margin-left: 1rem;
    margin-right: 1rem;
}

.project {
    break-inside: avoid-column;
    page-break-inside: avoid;

    /* Kinda hacky */
    height: 200px;
}

.section.projects .project:nth-of-type(4) {
    border-bottom: none;
    margin-bottom: 0;
}

.section {
    border: none;
}

h2 {
    font-size: 1.5rem;
    border-bottom: 1px solid var(--break-border-color);
}

h4 {
    font-size: 1.2rem;
}

.site-head {
    height: 120px;
}

.head-center {
    height: 100%;
    width: 800px;
    text-align: center;
}

.head-center > * {
    display: inline-block;
}

.my-face {
    height: 100px;
    display: inline-block;
}

h2.text-center {
    text-align: left !important;
}

.desc {
    font-size: 1.1rem;
}

.section {
    padding: 1rem 0 1rem 0;
}

.head-center {
    padding-top: 10px !important;
}

.skill-ref {
    display: none;
}

.print-skill-do-columns {
    column-count: 2;
    margin: 1rem 0 1rem 0;
}

.print-skill-do-columns table {
    display: inline;
}

.print-skill-do-columns tbody {
    display: inline;
}

.print-skill-do-columns tr {
    display: block;
    margin: 0 auto;
}

.print-skill-do-columns td {
    display: inline-block;
}

.print-skill-do-columns tr td:last-of-type {
    float: right;
}

